Add priviledge escalation for node_exporter service start

--- a/roles/node_exporter/tasks/main.yml
+++ b/roles/node_exporter/tasks/main.yml
@@ -41,6 +41,7 @@
     dest: /etc/systemd/system/node_exporter.service
 
 - name: Start node_exporter service
+  become: yes
   service:
     name: node_exporter
     state: started
