--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -12,6 +12,6 @@
       - python3-pip
       - git
       - vim
-- pip:
-    name: glances
-    executable: pip3
+# - pip:
+#     name: glances
+#     executable: pip3
