--- a/roles/monitoring_server/vars/main.yml
+++ b/roles/monitoring_server/vars/main.yml
@@ -5,3 +5,4 @@ groupId: "prometheus"
 exec_command: "/usr/local/bin/prometheus --config.file=/etc/prometheus/prometheus.conf --storage.tsdb.path=/media/dmndpl/PortableSSD/prometheus_data --storage.tsdb.retention=7d"
 prometheusVersion: "2.18.1"
 grafanaVersion: "7.0.0"
+prometheusDataDir: "/media/dmndpl/PortableSSD/prometheus_data"
